# haskell

./: decision.hs  lock.hs
2018/: template.hs
2019/: SOL.hs
2021/: Alloc.hs
2022/: Tries.hs
2022 src/: Examples.hs  SC.hs  Types.hs
2024/: Examples.hs  Int.hs  Types.hs  utilities.hs
2025/: Solver.hs
25 monads/: Examples.hs  Lexer.hs  Parser.hs  Types.hs
applicativeparsing/: App.hs
perfect-trees/: README.md  perfect-trees.cabal
perfect-trees/app/: Main.hs
perfect-trees/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
perfect-trees/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  perfect-trees-1.0.0.0-inplace.conf
perfect-trees/src/: ListUtils.hs  PerfectTrees.hs
perfect-trees/test/: Spec.hs
