cabal-version:      2.4
name:               perfect-trees
version:            1.0.0.0
synopsis:           Perfect k-ary trees with list utilities
license:            BSD-3-Clause
author:             Student
maintainer:         student@example.com
category:           Data
build-type:         Simple

library
    exposed-modules:  PerfectTrees, ListUtils
    build-depends:    base >=4.14 && <5, containers >=0.6
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable perfect-trees
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5, perfect-trees, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite perfect-trees-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base >=4.14 && <5, perfect-trees, containers, HUnit
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded